# Hydra

./: CMakeLists.txt  README.md
others/includes/: stdext.h  stdint.h  typedef.h  version.h
others/includes/utils/: CallHelper.h  ConfigParser.h  Detours.h  MemoryUtility.h  SimpleTime.h  ThreadPool.h
others/vmprotect/: VMProtectSDK32.lib
source/: CMakeLists.txt
source/Common/: CMakeLists.txt
source/Common/src/: framework.h  pch.h
source/Common/src/BSLib/: AppLogger.cpp  AppLogger.h  CriticalSectionScoped.h  HydraFramework.cpp  HydraFramework.h
source/Common/src/BSLib/Database/: DbConnection.cpp  DbConnection.h  DbConnectionPool.cpp  DbConnectionPool.h  DbInstance.cpp  DbInstance.h  DbManager.cpp  DbManager.h  DbRowReader.cpp  DbRowReader.h
source/Common/src/BSLib/Logger/: Logger.cpp  Logger.h  RLUTIL.h
source/Common/src/BSLib/NetEngine/: MSG_ID_DEF.h  Msg.cpp  Msg.h  NetEngine.cpp  NetEngine.h
source/Common/src/BSLib/Pattern/: Singleton.h
source/Common/src/BSLib/Utility/: ClassLink.h
source/Hydra/: CMakeLists.txt
source/Hydra/src/: Hydra.cpp  Hydra.def  Library.h  StaticPatches.h
source/Hydra/version/: VersionResource.in  VersionResource.rc
source/HydraDLL/: CMakeLists.txt
source/HydraDLL/src/: Library.cpp  StaticPatches.cpp
source/HydraDLL/version/: VersionInfo.cmake  VersionInfo.in  VersionResource.in  VersionResource.rc
source/HydraFramework/: CMakeLists.txt
source/HydraFramework/src/: HydraFramework.cpp  HydraFramework.h
source/HydraFramework/src/DataManager/: RefDataManager.cpp  RefDataManager.h  RefObjChar.h  RefObjCommon.h  RefObjItem.h  RefObjStruct.h  RefSkill.h
source/Modules/: CMakeLists.txt
source/Modules/AgentServer/: CMakeLists.txt
source/Modules/AgentServer/src/: AgentServer.cpp  AgentServer.h
source/Modules/AgentServer/src/Classes/: AgentMainProcess.cpp  AgentMainProcess.h
source/Modules/DownloadServer/: CMakeLists.txt
source/Modules/DownloadServer/src/: DownloadServer.cpp  DownloadServer.h
source/Modules/DownloadServer/src/Classes/: DownloadMainProcess.cpp  DownloadMainProcess.h
source/Modules/FarmManager/: CMakeLists.txt
source/Modules/FarmManager/src/: FarmManager.cpp  FarmManager.h
source/Modules/FarmManager/src/Classes/: FarmMainProcess.cpp  FarmMainProcess.h
source/Modules/GatewayServer/: CMakeLists.txt
source/Modules/GatewayServer/src/: GatewayServer.cpp  GatewayServer.h
source/Modules/GatewayServer/src/Classes/: GatewayMainProcess.cpp  GatewayMainProcess.h
source/Modules/GlobalManager/: CMakeLists.txt
source/Modules/GlobalManager/src/: GlobalManager.cpp  GlobalManager.h
source/Modules/GlobalManager/src/Classes/: GlobalMainProcess.cpp  GlobalMainProcess.h
source/Modules/MachineManager/: CMakeLists.txt
source/Modules/MachineManager/src/: MachineManager.cpp  MachineManager.h
source/Modules/MachineManager/src/Classes/: MachineMainProcess.cpp  MachineMainProcess.h
source/Modules/SR_GameServer/: CMakeLists.txt
source/Modules/SR_GameServer/src/: GameServer.cpp  GameServer.h
source/Modules/SR_GameServer/src/Classes/: GameMainProcess.cpp  GameMainProcess.h
source/Modules/SR_ShardManager/: CMakeLists.txt
source/Modules/SR_ShardManager/src/: ShardManager.cpp  ShardManager.h
source/Modules/SR_ShardManager/src/Classes/: ShardMainProcess.cpp  (+1 more)
(+15 files in other folders)
